plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.leets'
version = '0.0.1-SNAPSHOT'
description = 'TDD-BE'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

// nl.martijndwars:web-push:5.1.1이 취약한 async-http-client:2.10.4를 끌어온다(라이브러리 자체는
// 2020년 5.1.1 이후 신규 릴리즈가 없다). 같은 2.x 라인의 패치 버전인 2.12.4로 고정해 CVE를 해소한다.
// eachDependency로 group 전체(async-http-client, async-http-client-netty-utils 등)를 함께 승격한다.
configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.group == 'org.asynchttpclient') {
            details.useVersion('2.12.4')
            details.because('CVE fix: force patched async-http-client (web-push 5.1.1 transitive)')
        }
    }
}

dependencies {

    // Spring Boot Starter
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'

    // DB Migration
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.flywaydb:flyway-mysql'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Swagger (API Docs)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // AWS S3 (이미지 스토리지)
    // 자격 증명은 EC2 IAM Role이 제공하므로 Access Key를 설정하지 않는다.
    // AWS SDK의 기본 자격 증명 체인이 운영에서 IAM Role을 자동으로 선택한다.
    implementation platform('software.amazon.awssdk:bom:2.31.78')
    implementation 'software.amazon.awssdk:s3'

    // Web Push (웹푸시 알림 발송)
    // VAPID 서명 + 페이로드 암호화(ECDH/HKDF)를 처리한다. BouncyCastle이 암호화 provider로 필요하다.
    implementation 'nl.martijndwars:web-push:5.1.1'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Development
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

// 실행 가능한 bootJar만 남긴다. plain jar까지 생기면 배포 스크립트가
// build/libs/*.jar 중 어느 것을 집을지 모호해진다.
tasks.named('jar') {
    enabled = false
}
